--- a/src/superlists/lists/templates/home.html
+++ b/src/superlists/lists/templates/home.html
@@ -1,5 +1,6 @@
 {% load static i18n %}<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -109,10 +110,12 @@
 
     {% block content %}
         <h1>To-do</h1>
-
-        <input id="id_new_item" placeholder="Enter a to-do item"/>
-
+        <form method="POST">
+        {% csrf_token %}
+            <input id="id_new_item" placeholder="Enter a to-do item" name="item_text"/>
+        </form>
         <table id="id_list_table">
+            <tr><td>1: {{ new_item_text }}</td></tr>
         </table>
 
     {% endblock content %}
