--- a/src/superlists/lists/templates/home.html
+++ b/src/superlists/lists/templates/home.html
@@ -111,11 +111,15 @@
     {% block content %}
         <h1>To-do</h1>
         <form method="POST">
-        {% csrf_token %}
+            {% csrf_token %}
             <input id="id_new_item" placeholder="Enter a to-do item" name="item_text"/>
         </form>
         <table id="id_list_table">
-            <tr><td>1: {{ new_item_text }}</td></tr>
+            {% for item in items %}
+                <tr>
+                    <td>{{ forloop.counter }}: {{ item.text }}</td>
+                </tr>
+            {% endfor %}
         </table>
 
     {% endblock content %}
