--- a/src/superlists/lists/templates/home.html
+++ b/src/superlists/lists/templates/home.html
@@ -110,7 +110,7 @@
 
     {% block content %}
         <h1>To-do</h1>
-        <form method="POST">
+        <form method="POST" action="/"/>
             {% csrf_token %}
             <input id="id_new_item" placeholder="Enter a to-do item" name="item_text"/>
         </form>
