--- a/src/superlists/lists/templates/list.html
+++ b/src/superlists/lists/templates/list.html
@@ -109,11 +109,18 @@
     {% endif %}
 
     {% block content %}
-        <h1>Start a new to-do list</h1>
+        <h1>Your to-do list</h1>
         <form method="POST" action="/"/>
             {% csrf_token %}
             <input id="id_new_item" placeholder="Enter a to-do item" name="item_text"/>
         </form>
+        <table id="id_list_table">
+            {% for item in items %}
+                <tr>
+                    <td>{{ forloop.counter }}: {{ item.text }}</td>
+                </tr>
+            {% endfor %}
+        </table>
 
     {% endblock content %}
 
