--- a/src/superlists/lists/templates/list.html
+++ b/src/superlists/lists/templates/list.html
@@ -110,12 +110,12 @@
 
     {% block content %}
         <h1>Your to-do list</h1>
-        <form method="POST" action="/lists/new/"/>
+        <form method="POST" action="/lists/{{ list.id }}/add_item/">
             {% csrf_token %}
             <input id="id_new_item" placeholder="Enter a to-do item" name="item_text"/>
         </form>
         <table id="id_list_table">
-            {% for item in items %}
+            {% for item in list.item_set.all %}
                 <tr>
                     <td>{{ forloop.counter }}: {{ item.text }}</td>
                 </tr>
