--- a/src/superlists/lists/templates/list.html
+++ b/src/superlists/lists/templates/list.html
@@ -98,7 +98,10 @@
 </div>
 
 <div class="container">
-
+    <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6" align="center">
+<div class="jumbotron">
     {% if messages %}
         {% for message in messages %}
             <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}
@@ -112,9 +115,10 @@
         <h1>Your to-do list</h1>
         <form method="POST" action="/lists/{{ list.id }}/add_item/">
             {% csrf_token %}
-            <input id="id_new_item" placeholder="Enter a to-do item" name="item_text"/>
+            <input id="id_new_item" class="form-control input-lg" placeholder="Enter a to-do item" name="item_text"/>
         </form>
-        <table id="id_list_table">
+</div>
+        <table id="id_list_table" class="table">
             {% for item in list.item_set.all %}
                 <tr>
                     <td>{{ forloop.counter }}: {{ item.text }}</td>
@@ -124,6 +128,9 @@
 
     {% endblock content %}
 
+    </div>
+        <div class="col-md-3"></div>
+</div>
 </div> <!-- /container -->
 
 {% block modal %}{% endblock modal %}
